--- a/T1/Config/DefaultEngine.ini
+++ b/T1/Config/DefaultEngine.ini
@@ -4,6 +4,7 @@
 GameDefaultMap=/Game/Maps/DevMap.DevMap
 EditorStartupMap=/Game/Maps/DevMap.DevMap
 GlobalDefaultGameMode=/Script/T1.T1GameMode
+GameInstanceClass=/Script/T1.T1GameInstance
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
